# saguis

./: .gitignore  README.md  pyproject.toml
data/figures/: C. jacchus 29_05 - observations-580259.csv  Copy of C. aurita 29_05 - observations-580257.csv  Copy of C. penicillata 29_05 - observations-580262.csv
data/notebooks_sandbox/: Cópia de C. aurita 29_05 - observations-580257.csv  Cópia de C. jacchus 29_05 - observations-580259.csv  Cópia de C. penicillata 29_05 - observations-580262.csv  df_sudeste_agrupado_count.csv  merged_observations.csv  observations-580257.csv  observations-580259.csv  observations-580262.csv
notebooks/: aurita.ipynb  consertando_localidades.ipynb  consertando_localidades_v01.ipynb  consertando_localidades_v02_novos_dados.ipynb  inference.ipynb  jacchus.ipynb  penicillata.ipynb  plot_distribution_experiment.ipynb  raw_data.ipynb  remove_columns.ipynb  simple_predict.ipynb
src/app/: args.py  datasets.py  download_from_prepared.py  download_images.py  download_sanity_check.py  engine.py  extract_feats.py  infer.py  logging_utils.py  loop.py  metrics.py  models.py  prepare_location_features_and_map.py  split_dataset.py  train.py  train_old.py  xgboost.py
