[tool.poetry]
name = "saguis"
version = "0.1.0"
description = ""
authors = ["Maira Cunha Ferreira <m.ferreira.esib@esib.butantan.gov.br>", "Gabriel Costa <gabriel.alexandre98@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
geopandas = "^1.0.1"
shapely = "^2.1.0"
plotly = "^6.0.1"
nbformat = "^5.10.4"
requests = "^2.32.3"

# PyTorch stack (Apple Silicon / MPS)
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
timm = "^1.0.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
